force-app/main/default/objects/Crisis_Intervention__c/Crisis_Intervention__c.object-meta.xml
<CustomObject>
    <label>Crisis Intervention</label>
    <nameField>
        <label>Crisis Intervention</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crisis Interventions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>