force-app/main/default/objects/Crisis_Intervention__c/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <label>Actions Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>