force-app/main/default/objects/Crisis_Intervention__c/fields/Crisis_Date__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Date__c</fullName>
    <label>Crisis Date</label>
    <type>Date</type>
</CustomField>