force-app/main/default/objects/Crisis_Intervention__c/fields/Description_of_Crisis__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Crisis__c</fullName>
    <label>Description of Crisis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>