force-app/main/default/objects/Crisis_Intervention__c/fields/Related_Child_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Child_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Child Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Crisis Interventions</relationshipLabel>
    <relationshipName>Crisis_Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>