force-app/main/default/objects/Crisis_Intervention__c/fields/Support_Provided__c.field-meta.xml
<CustomField>
    <fullName>Support_Provided__c</fullName>
    <label>Support Provided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>