force-app/main/default/objects/Crisis_Intervention__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Crisis_Date__c</columns>
    <columns>Description_of_Crisis__c</columns>
    <columns>Actions_Taken__c</columns>
    <columns>Outcome__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Support_Provided__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>